code reformat and fixed menu and contacts overflow

--- a/nourish-flourish-landing/src/components/css/Menu.css
+++ b/nourish-flourish-landing/src/components/css/Menu.css
@@ -6,6 +6,7 @@
     align-items: flex-start;
     gap: 1em;
     margin: 1.5em;
+    overflow-x: scroll;
 }
 
 h2.category {
