--- a/nourish-flourish-landing/src/components/css/contact.css
+++ b/nourish-flourish-landing/src/components/css/contact.css
@@ -16,6 +16,7 @@ section.contactblurb {
     align-items: flex-start;
     gap: 1em;
     margin: 1.5em;
+    overflow-x: scroll;
 }
 
 .emaillink {
